--- a/resume.tex
+++ b/resume.tex
@@ -72,7 +72,7 @@
 \newcommand{\resumeScholarship}[4]{
     \vspace{-1pt}\item
         \begin{tabular*}{0.89\textwidth}{l@{\extracolsep{\fill}}r}
-            \textbf{#1} & #2 \\
+            \textbf{\small#1} & #2 \\
             \textit{\small#3} & \small #4 \\
         \end{tabular*}\vspace{-5pt}
     \vspace{0.3cm}
@@ -81,7 +81,7 @@
 \newcommand{\resumeWorkshops}[4]{
     \vspace{-1pt}\item
         \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
-            \textbf{#1} & #2 \\
+            \textbf{\small#1} & #2 \\
             \textit{\small#3} & \small #4 \\
         \end{tabular*}\vspace{-5pt}
     \vspace{0.3cm}
@@ -147,7 +147,7 @@ Passionate about learning and creating things, both in the fields of art and tec
             \item Correspondence flow control (Excel, archive).
             \item Payments (SAP ERP, taxes, associative contributions, consulting).
             \item Mailing of daily news (Diário Oficial da União, Canal Energia).
-            \item External services (Notary's office)
+            \item External services (Notary's office).
         \end{itemize}
         
         \vspace{0.2cm}
@@ -216,7 +216,7 @@ Passionate about learning and creating things, both in the fields of art and tec
     \resumeSubHeadingListStart
         \resumeSubItem{Technology}{}
             \begin{itemize}
-                \item \textbf{HáLugar:} Housing app for students. Developed for Android platform, using technologies such as Google Maps, Nominatim API, PhotoView, and Firebase (Auth, Realtime Database, Storage). \href{https://play.google.com/store/apps/details?id=br.ufc.crateus.halugar}{\scriptsize \faExternalLink}
+                \item \textbf{HáLugar:} Housing app for students. Developed for Android platform using technologies such as Google Maps, Nominatim API, PhotoView, and Firebase (Auth, Realtime Database, Storage). \href{https://play.google.com/store/apps/details?id=br.ufc.crateus.halugar}{\scriptsize \faExternalLink}
                 \item \textbf{Compixelar:} Development of multimedia experiments using Processing. \href{https://medium.com/@danielhbrito}{\scriptsize \faExternalLink}
             \end{itemize}
             
