--- a/resume.tex
+++ b/resume.tex
@@ -119,7 +119,7 @@
 
 %--------PROFILE------------
 \section{\faUser \hspace{0.2cm} \Large Profile}
-Passionate about learning and creating things, both in the fields of art and technology. Currently, focusing on topics concerning front-end development of web and mobile applications, but searching for opportunities to follow the steps to become a full-stack developer.
+Passionate about learning and creating things, both in the fields of art and technology. Currently, focusing on topics concerning front-end development of web and mobile applications, but following the steps to become a full-stack developer.
 
 \vspace{0.4cm}
 
@@ -127,14 +127,14 @@ Passionate about learning and creating things, both in the fields of art and tec
 \section{\faBriefcase \hspace{0.2cm} \Large Experience}
     \resumeSubHeadingListStart
         \resumeSubheading
-        {Federal University of Ceará}{\faMapMarker \hspace{0.1cm} Crateús, CE}
+        {Federal University of Ceará}{\faMapMarker \hspace{0.1cm} Crateús, CE - Remote}
         {Software Developer Intern}{\faCalendar \hspace{0.1cm} Jan 2020 - Dec 2020}
         
         \begin{itemize}
-            \item Our team developed a web and mobile application to optimize the patient admission process at the Pró-Hemoce Institute. Despite the affinity for learning front-end subjects, there was also a contact with technologies and concepts related to the back-end and DevOps. During this process, we followed some agile methodologies principles, such as Scrum and Kanban. \\
+            \item Our team developed a web and mobile application to optimize the patient admission process at Instituto Pró-Hemoce. Despite the affinity for learning front-end subjects, there was also a contact with concepts and technologies related to the back-end and DevOps. During this process, we followed some agile methodologies principles, such as Scrum and Kanban. \\
             \begin{itemize}
-                \item \textbf{Mobile:} Android (Java), Retrofit, RealmDB.
-                \item \textbf{Web:} UI/UX Design, Figma, ReactJS, Redux, TypeScript, Material-UI.
+                \item \textbf{Mobile:} Android (Java), Retrofit, Realm.
+                \item \textbf{Web:} ReactJS, Redux, TypeScript, Material-UI.
                 \item \textbf{Server:} Spring Framework, Hibernate, MySQL, FlyWay, JWT, Keycloak, MinIO, MQTT.
                 \item \textbf{DevOps:} Docker, Git, GitLab.
             \end{itemize}
@@ -202,9 +202,9 @@ Passionate about learning and creating things, both in the fields of art and tec
         \resumeSubItem {Programming Languages:}{C, Java, C++, JavaScript, Python.}
         \resumeSubItem {Front-end:}{HTML, CSS, Bootstrap, Material-UI, ReactJS, Styled Components, TypeScript.}
         \resumeSubItem {Graphic Design:}{Figma, Photoshop, Inkscape, Blender.}
-        \resumeSubItem {Mobile:}{Android, Retrofit, RealmDB.}
+        \resumeSubItem {Mobile:}{Android, Retrofit, Glide, PhotoView, Compressor, Google Maps, Realm.}
         \resumeSubItem {Back-end:}{Firebase, Spring Framework, MySQL.}
-        \resumeSubItem {DevOps:}{Docker, Git, GitLab.}
+        \resumeSubItem {DevOps:}{Docker, Git, GitHub, GitLab.}
         \resumeSubItem {Tools:}{Insomnia, MySQL Workbench.}
         \resumeSubItem {Soft Skills:}{Teamwork, communication, organization, creativity, critical thinking.}
     \resumeSubHeadingListEnd
@@ -216,7 +216,7 @@ Passionate about learning and creating things, both in the fields of art and tec
     \resumeSubHeadingListStart
         \resumeSubItem{Technology}{}
             \begin{itemize}
-                \item \textbf{HáLugar:} Housing app for students. Developed for Android platform using technologies such as Google Maps, Nominatim API, PhotoView, and Firebase (Auth, Realtime Database, Storage). \href{https://play.google.com/store/apps/details?id=br.ufc.crateus.halugar}{\scriptsize \faExternalLink}
+                \item \textbf{HáLugar:} Housing app for students. Developed for Android platform using technologies such as Google Maps, Nominatim API, Glide, PhotoView, and Firebase (Auth, Realtime Database, Storage). \href{https://play.google.com/store/apps/details?id=br.ufc.crateus.halugar}{\scriptsize \faExternalLink}
                 \item \textbf{Compixelar:} Development of multimedia experiments using Processing. \href{https://medium.com/@danielhbrito}{\scriptsize \faExternalLink}
             \end{itemize}
             
@@ -271,7 +271,7 @@ Passionate about learning and creating things, both in the fields of art and tec
     \resumeSubHeadingListEnd
 
 %-----------OTHER INTERESTS-----------------
-\section{\faHeart \hspace{0.2cm} \Large Other Interests}
+\section{\faThumbsUp \hspace{0.2cm} \Large Other Interests}
     Generative design, chess, competitive programming, astronomy, philosophy, literature, sports, travelling, cinema.
   
 %-------------------------------------------
