--- a/resume.tex
+++ b/resume.tex
@@ -45,6 +45,9 @@
 \addtolength{\topmargin}{-.5in}
 \addtolength{\textheight}{1.0in}
 
+% Better adjustment
+\usepackage[margin=0.5in]{geometry}
+
 \urlstyle{same}
 
 \raggedbottom
@@ -80,6 +83,15 @@
 }
 
 \newcommand{\resumeWorkshops}[4]{
+    \vspace{-1pt}\item
+        \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
+            \textbf{\small#1} & #2 \\
+            \textit{\small#3} & \small #4 \\
+        \end{tabular*}\vspace{-5pt}
+    \vspace{0.3cm}
+}
+
+\newcommand{\resumeCertifications}[4]{
     \vspace{-1pt}\item
         \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
             \textbf{\small#1} & #2 \\
@@ -132,8 +144,8 @@ Passionate about learning and creating things, both in the fields of art and tec
 
     \resumeSubHeadingListStart
         \resumeSubheading
-        {Federal University of Ceará}{\faMapMarker \hspace{0.1cm} Crateús, CE}
         {Bachelor of Computer Science}{\faCalendar \hspace{0.1cm} 2017 - 2021}
+        {Federal University of Ceará}{\faMapMarker \hspace{0.1cm} Crateús, CE}
         \begin{itemize}
             \item \textbf{Scholarships}
                 \begin{itemize}
@@ -154,7 +166,7 @@ Passionate about learning and creating things, both in the fields of art and tec
         \begin{itemize}
             \item \textbf{Volunteer}
                 \begin{itemize}
-                    \item \textbf{GEMP:} Group of studies for the SBC Programming Marathon. \href{https://github.com/GEMP-UFC-Crateus}{\scriptsize \faExternalLink}
+                    \item \textbf{GEMP/CRT:} Study group for the SBC Programming Marathon. \href{https://github.com/GEMP-UFC-Crateus}{\scriptsize \faExternalLink}
                 \end{itemize}
         \end{itemize}
         
@@ -166,37 +178,36 @@ Passionate about learning and creating things, both in the fields of art and tec
 
     \resumeSubHeadingListStart
         \resumeSubheading
-        {Federal University of Ceará}{\faMapMarker \hspace{0.1cm} Crateús, CE - Remote}
-        {Software Developer Intern}{\faCalendar \hspace{0.1cm} Jan 2020 - Dec 2020}
+        {Software Developer Intern}{\faCalendar \hspace{0.1cm} Feb 2021 - Currently}
+        {Instituto Pró-Hemoce}{\faMapMarker \hspace{0.1cm} Fortaleza, CE - Remote}
         
         \begin{itemize}
-            \item Development of web and mobile applications to optimize the patient admission process at Instituto Pró-Hemoce. Some features include user management, notifications, chatbot, and generation of reports. Despite the affinity for learning front-end subjects, there was also a contact with concepts and tools related to the back-end and DevOps, as well as some agile methodologies principles, such as Scrum and Kanban.
+            \item Development of new features for RHeuni, a Human Resources management platform, such as an agenda for collaborators, events, room reservation, storage of recorded meetings, workshop files, and more. Some activities performed include the construction of REST APIs, UI/UX Design and System Architecture.
             \begin{itemize}
-                \item \textbf{Mobile:} Android (Java), Retrofit, Realm.
-                \item \textbf{Web:} ReactJS, Redux, TypeScript, Material-UI.
-                \item \textbf{Server:} Spring Framework, Hibernate, MySQL, FlyWay, JWT, Keycloak, MinIO, MQTT.
-                \item \textbf{DevOps:} Docker, Git, GitLab.
+                \item \textbf{Front-end:} ReactJS, JavaScript, Material-UI.
+                \item \textbf{Back-end:} Node.js, Express, Sequelize, PostgreSQL, JWT.
+                \item \textbf{DevOps:} Git, GitLab.
             \end{itemize}
         \end{itemize}
     \resumeSubHeadingListEnd
     
     \vspace{-0.3cm}
-    
+
     \resumeSubHeadingListStart
         \resumeSubheading
-        {Instituto Pró-Hemoce}{\faMapMarker \hspace{0.1cm} Fortaleza, CE - Remote}
-        {Software Developer Intern}{\faCalendar \hspace{0.1cm} Feb 2021 - Currently}
+        {Software Developer Intern}{\faCalendar \hspace{0.1cm} Jan 2020 - Dec 2020}
+        {Federal University of Ceará}{\faMapMarker \hspace{0.1cm} Crateús, CE - Remote}
         
         \begin{itemize}
-            \item Improvements on RHeuni, a Human Resources management platform, which includes an agenda for collaborators, room reservation, storage of meetings, workshops, and other features.
+            \item Development of web and mobile applications to optimize the patient admission process at Instituto Pró-Hemoce. Some features include user management, notifications, gallery of images, chatbot, and generation of reports. Despite the affinity for learning front-end subjects, there was also a contact with concepts and tools related to the back-end and DevOps, as well as some agile methodologies principles, such as Scrum and Kanban.
             \begin{itemize}
-                \item \textbf{Front-end:} Angular, TypeScript, Clarity.
-                \item \textbf{Back-end:} Spring Framework, MySQL.
-                \item \textbf{DevOps:} Git, GitLab.
+                \item \textbf{Mobile:} Android, Java, Retrofit, Realm.
+                \item \textbf{Web:} ReactJS, TypeScript, Material-UI, Redux.
+                \item \textbf{Server:} Spring Framework, Hibernate, MySQL, FlyWay, JWT, Keycloak, MinIO, MQTT.
+                \item \textbf{DevOps:} Docker, Git, GitLab.
             \end{itemize}
-            
-            \vspace{0.02cm} % Space between sections
         \end{itemize}
+        \vspace{0.02cm} % Space between sections
     \resumeSubHeadingListEnd
 
 %--------LANGUAGES------------
@@ -209,19 +220,21 @@ Passionate about learning and creating things, both in the fields of art and tec
     \textbf{French:} Basic
 \end{tabular}
 
+\vspace{0.2cm} % Space between sections
+
 %--------SKILLS------------
 \section{\faPuzzlePiece \hspace{0.2cm} \Large Skills}
 
-    Main knowledge applied to personal and professional projects as a software developer, besides other topics from a personal self-learning guide. \href{https://github.com/DanielBrito/self-learning}{\scriptsize \faExternalLink}
+    Main knowledge applied to personal and professional projects as a software developer, besides other topics from a personal study guide. \href{https://github.com/DanielBrito/self-learning}{\scriptsize \faExternalLink}
     
     \resumeSubHeadingListStart
-        \resumeSubItem {Programming Languages:}{C, Java, C++, JavaScript, Python.}
+        \resumeSubItem {Programming Languages:}{C, Java, C++, JavaScript, Python, Processing.}
         \resumeSubItem {Front-end:}{HTML, CSS, Bootstrap, Material-UI, ReactJS, Styled Components, TypeScript.}
         \resumeSubItem {Graphic Design:}{Figma, Photoshop, Inkscape, Blender.}
         \resumeSubItem {Mobile:}{Android, Retrofit, Realm.}
-        \resumeSubItem {Back-end:}{Firebase, Spring Framework, MySQL.}
+        \resumeSubItem {Back-end:}{Firebase, Spring Framework, MySQL, Node.js, PostgreSQL, JWT, Express, Sequelize.}
         \resumeSubItem {DevOps:}{Docker, Git, GitHub, GitLab.}
-        \resumeSubItem {Tools:}{Insomnia, MySQL Workbench.}
+        \resumeSubItem {Tools:}{Insomnia, DBeaver.}
         \resumeSubItem {Soft Skills:}{Teamwork, communication, organization, creativity, critical thinking.}
     \resumeSubHeadingListEnd
   
@@ -233,10 +246,11 @@ Passionate about learning and creating things, both in the fields of art and tec
     \resumeSubHeadingListStart
         \resumeSubItem{Technology}{}
             \begin{itemize}
-                \item \textbf{HáLugar:} Housing app for students. Developed for Android platform using Java and technologies such as Google Maps, Nominatim API, Glide, PhotoView, Compressor, and Firebase (Auth, Realtime Database, Storage). \href{https://play.google.com/store/apps/details?id=br.ufc.crateus.halugar}{\scriptsize \faExternalLink}
+                \item \textbf{HáLugar:} Housing app for students. Developed for Android platform using Java and other tools such as Google Maps, Nominatim API, Glide, PhotoView, Compressor, and Firebase (Auth, Realtime Database, Storage). \href{https://play.google.com/store/apps/details?id=br.ufc.crateus.halugar}{\scriptsize \faExternalLink}
                 \item \textbf{Compixelar:} Development of multimedia experiments using Processing. \href{https://medium.com/@danielhbrito}{\scriptsize \faExternalLink}
                 \item \textbf{Fire Tasks:} Task manager built with ReactJS, Styled Components and Firestore. \href{https://github.com/DanielBrito/fire-tasks}{\scriptsize \faExternalLink}
-                \item \textbf{Home:} Refactored version of my first website, using ReactJS and Material-UI. \href{https://danielbrito.github.io/home/}{\scriptsize \faExternalLink}
+                \item \textbf{RESTack:} Experimental REST API built with Node.js, Express, Sequelize, PostgreSQL and JWT. \href{https://github.com/DanielBrito/restack-api}{\scriptsize \faExternalLink}
+                \item \textbf{Home:} Refactored version of my first website using ReactJS and Material-UI. \href{https://danielbrito.github.io/home/}{\scriptsize \faExternalLink}
             \end{itemize}
             
         \resumeSubItem{Education}{}
@@ -263,12 +277,23 @@ Passionate about learning and creating things, both in the fields of art and tec
             
             \vspace{0.05cm} % Space between sections
     \resumeSubHeadingListEnd
+    
+%-----------CERTIFICATIONS-----------------
+\section{\faCertificate \hspace{0.2cm} \Large Certifications}
+
+    \resumeSubHeadingListStart
+        \resumeCertifications
+            {Responsive Web Design:}{{\small \faInstitution} \hspace{0.01cm} freeCodeCamp}
+            {Basics of HTML and CSS. Best practices for accessibility. Responsive design principles. \href{https://www.freecodecamp.org/certification/danielbrito/responsive-web-design}{\scriptsize \faExternalLink}}{\faClockO \hspace{0.1cm} 300 h}
+            
+            \vspace{0.05cm} % Space between sections
+    \resumeSubHeadingListEnd
 
 %-----------AWARDS-----------------
 \section{\faTrophy \hspace{0.2cm} \Large Awards}
     \resumeSubHeadingListStart
         \resumeSubItem{Best Work:}
-        {Project ``Practical studies of 3D modeling and Virtual Reality using Blender'' during the 3rd edition of Encontros Universitários at the Federal University of Ceará - Crateús Campus.}
+        {Project ``Practical studies of 3D modeling and Virtual Reality using Blender'' during the 3\textsuperscript{rd} edition of Encontros Universitários at the Federal University of Ceará - Crateús Campus.}
         
         \vspace{0.5cm}
     \resumeSubHeadingListEnd
@@ -291,7 +316,7 @@ Passionate about learning and creating things, both in the fields of art and tec
 %-----------OTHER INTERESTS-----------------
 \section{\faThumbsUp \hspace{0.2cm} \Large Other Interests}
 
-    Generative design, competitive programming, chess, astronomy, philosophy, literature, sports, travelling, cinema.
+    Generative design, competitive programming, chess, astronomy, philosophy, literature, sports, music, cinema, travelling, blogging.
   
 %-------------------------------------------
 \end{document}
