Added Hackathon and Workshop

--- a/resume.tex
+++ b/resume.tex
@@ -88,7 +88,7 @@
             \textbf{\small#1} & #2 \\
             \textit{\small#3} & \small #4 \\
         \end{tabular*}\vspace{-5pt}
-    \vspace{0.3cm}
+    \vspace{0.1cm}
 }
 
 \newcommand{\resumeCertifications}[4]{
@@ -97,7 +97,7 @@
             \textbf{\small#1} & #2 \\
             \textit{\small#3} & \small #4 \\
         \end{tabular*}\vspace{-5pt}
-    \vspace{0.3cm}
+    \vspace{0.1cm}
 }
 
 \newcommand{\resumeSubItem}[2]{\resumeItem{#1}{#2}\vspace{-4pt}}
@@ -128,7 +128,7 @@
     \faPaperPlane{\hspace{0.2cm}\href{https://t.me/danielhbrito}{danielhbrito}}
 \end{tabular}
 
-\vspace{0.1cm} % Space between sections
+\vspace{0.3cm} % Space between sections
 
 % Justifying all the content:
 \justify
@@ -137,7 +137,7 @@
 \section{\faUser \hspace{0.2cm} \Large Profile}
 Passionate about learning and creating things, both in the fields of art and technology. Furthermore, in order to consolidate some skills, enjoys sharing knowledge through teaching. Currently, focusing on topics concerning front-end development of web and mobile applications, but following the steps to become a full-stack developer.
 
-\vspace{0.2cm} % Space between sections
+\vspace{0.1cm} % Space between sections
 
 %-----------EDUCATION-----------------
 \section{\faGraduationCap \hspace{0.2cm} \Large Education}
@@ -170,7 +170,7 @@ Passionate about learning and creating things, both in the fields of art and tec
                 \end{itemize}
         \end{itemize}
         
-        \vspace{0.01cm} % Space between sections
+        %\vspace{0.01cm} % Space between sections
     \resumeSubHeadingListEnd
 
 %-----------EXPERIENCE-----------------
@@ -182,11 +182,12 @@ Passionate about learning and creating things, both in the fields of art and tec
         {Instituto Pró-Hemoce}{\faMapMarker \hspace{0.1cm} Fortaleza, CE - Remote}
         
         \begin{itemize}
-            \item Development of new features for RHeuni, a Human Resources management platform, such as an agenda for collaborators, events, room reservation, storage of recorded meetings, workshop files, and more. Some activities performed include the construction of REST APIs, UI/UX Design and System Architecture.
+            \item Development of new features for a Human Resources management platform (RHeuni), such as an agenda for collaborators, events, and room reservation, besides the storage of recorded meetings and workshop files. Some of the activities performed include Software Architecture, through the construction of REST APIs, UI/UX Design, and more.
             \begin{itemize}
                 \item \textbf{Front-end:} ReactJS, JavaScript, Material-UI.
                 \item \textbf{Back-end:} Node.js, Express, Sequelize, PostgreSQL, JWT.
                 \item \textbf{DevOps:} Git, GitLab.
+                \item \textbf{Design:} Draw.io, Figma.
             \end{itemize}
         \end{itemize}
     \resumeSubHeadingListEnd
@@ -199,7 +200,7 @@ Passionate about learning and creating things, both in the fields of art and tec
         {Federal University of Ceará}{\faMapMarker \hspace{0.1cm} Crateús, CE - Remote}
         
         \begin{itemize}
-            \item Development of web and mobile applications to optimize the patient admission process at Instituto Pró-Hemoce. Some features include user management, notifications, gallery of images, chatbot, and generation of reports. Despite the affinity for learning front-end subjects, there was also a contact with concepts and tools related to the back-end and DevOps, as well as some agile methodologies principles, such as Scrum and Kanban.
+            \item Development of web and mobile applications to optimize the patient admission process at Instituto Pró-Hemoce. Some features include user management, notifications, image gallery, chatbot, and generation of reports. Despite the affinity for learning front-end subjects, there was also a contact with concepts and tools related to the back-end and DevOps, as well as some agile methodologies principles, such as Scrum and Kanban.
             \begin{itemize}
                 \item \textbf{Mobile:} Android, Java, Retrofit, Realm.
                 \item \textbf{Web:} ReactJS, TypeScript, Material-UI, Redux.
@@ -220,7 +221,7 @@ Passionate about learning and creating things, both in the fields of art and tec
     \textbf{French:} Basic
 \end{tabular}
 
-\vspace{0.2cm} % Space between sections
+% \vspace{0.2cm} % Space between sections
 
 %--------SKILLS------------
 \section{\faPuzzlePiece \hspace{0.2cm} \Large Skills}
@@ -236,9 +237,9 @@ Passionate about learning and creating things, both in the fields of art and tec
         \resumeSubItem {DevOps:}{Docker, Git, GitHub, GitLab.}
         \resumeSubItem {Tools:}{Insomnia, DBeaver.}
         \resumeSubItem {Soft Skills:}{Teamwork, communication, organization, creativity, critical thinking.}
+        
+        \vspace{0.2cm} % Space between section
     \resumeSubHeadingListEnd
-  
-\vspace{0.01cm} % Space between sections
 
 %-----------PROJECTS-----------------
 \section{\faRocket \hspace{0.2cm} \Large Projects}
@@ -246,11 +247,10 @@ Passionate about learning and creating things, both in the fields of art and tec
     \resumeSubHeadingListStart
         \resumeSubItem{Technology}{}
             \begin{itemize}
-                \item \textbf{HáLugar:} Housing app for students. Developed for Android platform using Java and other tools such as Google Maps, Nominatim API, Glide, PhotoView, Compressor, and Firebase (Auth, Realtime Database, Storage). \href{https://play.google.com/store/apps/details?id=br.ufc.crateus.halugar}{\scriptsize \faExternalLink}
+                \item \textbf{HáLugar:} Housing app for students. Developed for Android platform using Java, and other tools such as Google Maps, Nominatim API, Glide, PhotoView, Compressor, and Firebase (Auth, Realtime Database, Storage). \href{https://play.google.com/store/apps/details?id=br.ufc.crateus.halugar}{\scriptsize \faExternalLink}
                 \item \textbf{Compixelar:} Development of multimedia experiments using Processing. \href{https://medium.com/@danielhbrito}{\scriptsize \faExternalLink}
-                \item \textbf{Fire Tasks:} Task manager built with ReactJS, Styled Components and Firestore. \href{https://github.com/DanielBrito/fire-tasks}{\scriptsize \faExternalLink}
                 \item \textbf{RESTack:} Experimental REST API built with Node.js, Express, Sequelize, PostgreSQL and JWT. \href{https://github.com/DanielBrito/restack-api}{\scriptsize \faExternalLink}
-                \item \textbf{Home:} Refactored version of my first website using ReactJS and Material-UI. \href{https://danielbrito.github.io/home/}{\scriptsize \faExternalLink}
+                \item \textbf{Home:} Refactored version of first personal website using ReactJS and Material-UI. \href{https://danielbrito.github.io/home/}{\scriptsize \faExternalLink}
             \end{itemize}
             
         \resumeSubItem{Education}{}
@@ -264,7 +264,7 @@ Passionate about learning and creating things, both in the fields of art and tec
                 \item \textbf{Aluminions:} Creation of characters using aluminum seals. \href{https://www.instagram.com/aluminions.13/}{\scriptsize \faExternalLink}
             \end{itemize}
             
-            \vspace{0.05cm} % Space between sections
+            %\vspace{0.05cm} % Space between sections
     \resumeSubHeadingListEnd
 
 %-----------WORKSHOPS-----------------
@@ -274,8 +274,11 @@ Passionate about learning and creating things, both in the fields of art and tec
         \resumeWorkshops
             {Introduction to Digital Art with Blender:}{\faMapMarker \hspace{0.1cm} Federal University of Ceará}
             {Presentation of basic resources like creating and animating digital objects.}{\faCalendar \hspace{0.1cm} Feb 2020}
+        \resumeWorkshops
+            {Fire Tasks - An awesome task manager:}{\faMapMarker \hspace{0.1cm} Federal University of Ceará}
+            {Application built with ReactJS, Styled Components and Firestore. \href{https://github.com/DanielBrito/fire-tasks}{\scriptsize \faExternalLink}}{\faCalendar \hspace{0.1cm} Mar 2021}
             
-            \vspace{0.05cm} % Space between sections
+            %\vspace{0.05cm} % Space between sections
     \resumeSubHeadingListEnd
     
 %-----------CERTIFICATIONS-----------------
@@ -286,16 +289,19 @@ Passionate about learning and creating things, both in the fields of art and tec
             {Responsive Web Design:}{{\small \faInstitution} \hspace{0.01cm} freeCodeCamp}
             {Basics of HTML and CSS. Best practices for accessibility. Responsive design principles. \href{https://www.freecodecamp.org/certification/danielbrito/responsive-web-design}{\scriptsize \faExternalLink}}{\faClockO \hspace{0.1cm} 300 h}
             
-            \vspace{0.05cm} % Space between sections
+            %\vspace{0.05cm} % Space between sections
     \resumeSubHeadingListEnd
 
 %-----------AWARDS-----------------
 \section{\faTrophy \hspace{0.2cm} \Large Awards}
     \resumeSubHeadingListStart
         \resumeSubItem{Best Work:}
-        {Project ``Practical studies of 3D modeling and Virtual Reality using Blender'' during the 3\textsuperscript{rd} edition of Encontros Universitários at the Federal University of Ceará - Crateús Campus.}
+        {Project ``Practical studies of 3D modeling and Virtual Reality using Blender'' during Encontros Universitários at the Federal University of Ceará - Crateús Campus.}
         
-        \vspace{0.5cm}
+        \resumeSubItem{First Place:}
+        {Hackathon FIT-ON, promoted during the Fórum de Inovação e Tecnologia at the Federal University of Ceará - Crateús Campus.}
+        
+        \vspace{0.2cm}
     \resumeSubHeadingListEnd
 
 %-----------PUBLICATIONS (Already on my website)-----------------
