--- a/resume.tex
+++ b/resume.tex
@@ -115,7 +115,7 @@
 
 %----------HEADING-----------------
 \textbf{\huge Daniel Brito} \\ 
-\textbf{Front-end and Android developer • Visual artist • Writer} \\
+\textbf{Front-end Developer • Visual Artist • Writer} \\
   
 \vspace{0.2cm} % Space between sections
 
@@ -178,16 +178,26 @@ Passionate about learning and creating things, both in the fields of art and tec
 
     \resumeSubHeadingListStart
         \resumeSubheading
-        {Software Developer Intern}{\faCalendar \hspace{0.1cm} Feb 2021 - Currently}
+        {Front-end Developer}{\faCalendar \hspace{0.1cm} Apr 2021 - Currently}
+        {OSF Digital}{\faMapMarker \hspace{0.1cm} Quixadá, CE - Remote}
+        \begin{itemize}
+            \item Development of efficient and scalable systems using the best technologies available in the market.
+        \end{itemize}
+    \resumeSubHeadingListEnd
+    
+    \vspace{-0.3cm}
+
+    \resumeSubHeadingListStart
+        \resumeSubheading
+        {Software Developer Intern}{\faCalendar \hspace{0.1cm} Feb 2021 - Apr 2021}
         {Instituto Pró-Hemoce}{\faMapMarker \hspace{0.1cm} Fortaleza, CE - Remote}
         
         \begin{itemize}
-            \item Development of new features for a Human Resources management platform (RHeuni), such as an agenda for collaborators, events, and room reservation, besides the storage of recorded meetings and workshop files. Some of the activities performed include Software Architecture, through the construction of REST APIs, UI/UX Design, and more.
+            \item Development of new features for RHeuni, a Human Resources management platform.
             \begin{itemize}
-                \item \textbf{Front-end:} ReactJS, JavaScript, Material-UI.
                 \item \textbf{Back-end:} Node.js, Express, Sequelize, PostgreSQL, JWT.
                 \item \textbf{DevOps:} Git, GitLab.
-                \item \textbf{Design:} Draw.io, Figma.
+                \item \textbf{Tools:} Draw.io, Figma, DBeaver, Insomnia.
             \end{itemize}
         \end{itemize}
     \resumeSubHeadingListEnd
@@ -231,7 +241,7 @@ Passionate about learning and creating things, both in the fields of art and tec
     \resumeSubHeadingListStart
         \resumeSubItem {Programming Languages:}{C, Java, C++, JavaScript, Python, Processing.}
         \resumeSubItem {Front-end:}{HTML, CSS, Bootstrap, Material-UI, ReactJS, Styled Components, TypeScript.}
-        \resumeSubItem {Graphic Design:}{Figma, Photoshop, Inkscape, Blender.}
+        \resumeSubItem {Graphic Design:}{Figma, Draw.io, Photoshop, Inkscape, Blender.}
         \resumeSubItem {Mobile:}{Android, Retrofit, Realm.}
         \resumeSubItem {Back-end:}{Firebase, Spring Framework, MySQL, Node.js, PostgreSQL, JWT, Express, Sequelize.}
         \resumeSubItem {DevOps:}{Docker, Git, GitHub, GitLab.}
@@ -248,9 +258,10 @@ Passionate about learning and creating things, both in the fields of art and tec
         \resumeSubItem{Technology}{}
             \begin{itemize}
                 \item \textbf{HáLugar:} Housing app for students. Developed for Android platform using Java, and other tools such as Google Maps, Nominatim API, Glide, PhotoView, Compressor, and Firebase (Auth, Realtime Database, Storage). \href{https://play.google.com/store/apps/details?id=br.ufc.crateus.halugar}{\scriptsize \faExternalLink}
+                \item \textbf{Dissertation:} Procedural modeling with Blender and Python. \href{https://github.com/DanielBrito/monografia}{\scriptsize \faExternalLink}
                 \item \textbf{Compixelar:} Development of multimedia experiments using Processing. \href{https://medium.com/@danielhbrito}{\scriptsize \faExternalLink}
                 \item \textbf{RESTack:} Experimental REST API built with Node.js, Express, Sequelize, PostgreSQL and JWT. \href{https://github.com/DanielBrito/restack-api}{\scriptsize \faExternalLink}
-                \item \textbf{Home:} Refactored version of first personal website using ReactJS and Material-UI. \href{https://danielbrito.github.io/home/}{\scriptsize \faExternalLink}
+                \item \textbf{Home:} Refactored version of personal website using ReactJS and Material-UI. \href{https://danielbrito.github.io/home/}{\scriptsize \faExternalLink}
             \end{itemize}
             
         \resumeSubItem{Education}{}
@@ -272,11 +283,11 @@ Passionate about learning and creating things, both in the fields of art and tec
 
     \resumeSubHeadingListStart
         \resumeWorkshops
-            {Introduction to Digital Art with Blender:}{\faMapMarker \hspace{0.1cm} Federal University of Ceará}
-            {Presentation of basic resources like creating and animating digital objects.}{\faCalendar \hspace{0.1cm} Feb 2020}
-        \resumeWorkshops
             {Fire Tasks - An awesome task manager:}{\faMapMarker \hspace{0.1cm} Federal University of Ceará}
             {Application built with ReactJS, Styled Components and Firestore. \href{https://github.com/DanielBrito/fire-tasks}{\scriptsize \faExternalLink}}{\faCalendar \hspace{0.1cm} Mar 2021}
+        \resumeWorkshops
+            {Introduction to Digital Art with Blender:}{\faMapMarker \hspace{0.1cm} Federal University of Ceará}
+            {Presentation of basic resources like creating and animating digital objects.}{\faCalendar \hspace{0.1cm} Feb 2020}
             
             %\vspace{0.05cm} % Space between sections
     \resumeSubHeadingListEnd
