--- a/resume.tex
+++ b/resume.tex
@@ -115,7 +115,7 @@
 
 %----------HEADING-----------------
 \textbf{\huge Daniel Brito} \\ 
-\textbf{Front-end Developer • Visual Artist • Writer} \\
+\textbf{Software Developer • Visual Artist • Writer} \\
   
 \vspace{0.2cm} % Space between sections
 
@@ -135,7 +135,7 @@
 
 %--------PROFILE------------
 \section{\faUser \hspace{0.2cm} \Large Profile}
-Passionate about learning and creating things, both in the fields of art and technology. Furthermore, in order to consolidate some skills, enjoys sharing knowledge through teaching. Currently, focusing on topics concerning front-end development of web and mobile applications, but following the steps to become a full-stack developer.
+Passionate about learning and creating things, both in the fields of art and technology. Currently, focusing on topics concerning usability and front-end development of web and mobile applications, but following the steps to become a full-stack developer.
 
 \vspace{0.1cm} % Space between sections
 
@@ -157,20 +157,21 @@ Passionate about learning and creating things, both in the fields of art and tec
                     {Program of Academic Initiation:}{\faCalendar \hspace{0.1cm} \small Apr 2018 - Dec 2018}
                     {Practical studies of 3D modeling and Virtual Reality using Blender.}{}
         
-                    \resumeScholarship
-                    {Program of Academic Initiation:}{\faCalendar \hspace{0.1cm} \small Jun 2017 - Dec 2017}
-                    {Development of educational platform using Semantic UI and AngularJS.}{}
+                    % \resumeScholarship
+                    % {Program of Academic Initiation:}{\faCalendar \hspace{0.1cm} \small Jun 2017 - Dec 2017}
+                    % {Development of educational platform using AngularJS and Semantic UI.}{}
                 \end{itemize}
         \end{itemize}
+        
+        \vspace{-0.2cm}
       
         \begin{itemize}
             \item \textbf{Volunteer}
                 \begin{itemize}
                     \item \textbf{GEMP/CRT:} Study group for the SBC Programming Marathon. \href{https://github.com/GEMP-UFC-Crateus}{\scriptsize \faExternalLink}
                 \end{itemize}
+                \vspace{0.05cm}
         \end{itemize}
-        
-        %\vspace{0.01cm} % Space between sections
     \resumeSubHeadingListEnd
 
 %-----------EXPERIENCE-----------------
@@ -181,7 +182,7 @@ Passionate about learning and creating things, both in the fields of art and tec
         {Front-end Developer}{\faCalendar \hspace{0.1cm} Apr 2021 - Currently}
         {OSF Digital}{\faMapMarker \hspace{0.1cm} Quixadá, CE - Remote}
         \begin{itemize}
-            \item Development of efficient and scalable systems using the best technologies available in the market.
+            \item Development of enterprise CRM systems and Proofs Of Concept.
         \end{itemize}
     \resumeSubHeadingListEnd
     
@@ -207,18 +208,18 @@ Passionate about learning and creating things, both in the fields of art and tec
     \resumeSubHeadingListStart
         \resumeSubheading
         {Software Developer Intern}{\faCalendar \hspace{0.1cm} Jan 2020 - Dec 2020}
-        {Federal University of Ceará}{\faMapMarker \hspace{0.1cm} Crateús, CE - Remote}
+        {Fundação ASTEF}{\faMapMarker \hspace{0.1cm} Crateús, CE - Remote}
         
         \begin{itemize}
-            \item Development of web and mobile applications to optimize the patient admission process at Instituto Pró-Hemoce. Some features include user management, notifications, image gallery, chatbot, and generation of reports. Despite the affinity for learning front-end subjects, there was also a contact with concepts and tools related to the back-end and DevOps, as well as some agile methodologies principles, such as Scrum and Kanban.
+            \item Development of web and mobile applications to optimize the patient admission process at Instituto Pró-Hemoce. Some features include user management, notifications, image gallery, chatbot, and generation of reports. Despite the affinity for learning front-end subjects, there was also a contact with concepts and tools related to UI/UX Design, back-end and DevOps, as well as some agile methodologies principles.
             \begin{itemize}
                 \item \textbf{Mobile:} Android, Java, Retrofit, Realm.
                 \item \textbf{Web:} ReactJS, TypeScript, Material-UI, Redux.
                 \item \textbf{Server:} Spring Framework, Hibernate, MySQL, FlyWay, JWT, Keycloak, MinIO, MQTT.
                 \item \textbf{DevOps:} Docker, Git, GitLab.
             \end{itemize}
+            \vspace{0.01cm} % Space between sections
         \end{itemize}
-        \vspace{0.02cm} % Space between sections
     \resumeSubHeadingListEnd
 
 %--------LANGUAGES------------
@@ -236,19 +237,19 @@ Passionate about learning and creating things, both in the fields of art and tec
 %--------SKILLS------------
 \section{\faPuzzlePiece \hspace{0.2cm} \Large Skills}
 
-    Main knowledge applied to personal and professional projects as a software developer, besides other topics from a personal study guide. \href{https://github.com/DanielBrito/self-learning}{\scriptsize \faExternalLink}
+    Main knowledge acquired while working as a software developer, besides other topics from a study guide. \href{https://github.com/DanielBrito/self-learning}{\scriptsize \faExternalLink}
     
     \resumeSubHeadingListStart
-        \resumeSubItem {Programming Languages:}{C, Java, C++, JavaScript, Python, Processing.}
-        \resumeSubItem {Front-end:}{HTML, CSS, Bootstrap, Material-UI, ReactJS, Styled Components, TypeScript.}
-        \resumeSubItem {Graphic Design:}{Figma, Draw.io, Photoshop, Inkscape, Blender.}
-        \resumeSubItem {Mobile:}{Android, Retrofit, Realm.}
-        \resumeSubItem {Back-end:}{Firebase, Spring Framework, MySQL, Node.js, PostgreSQL, JWT, Express, Sequelize.}
-        \resumeSubItem {DevOps:}{Docker, Git, GitHub, GitLab.}
+        \resumeSubItem {Programming Languages:}{JavaScript, Dart, Java, C++, Python, Processing, C.}
+        \resumeSubItem {Front-end:}{HTML, CSS, ReactJS, Material-UI, Styled Components, TypeScript, Bootstrap.}
+        \resumeSubItem {Graphic Design:}{Figma, Photoshop, Inkscape, Blender.}
+        \resumeSubItem {Mobile:}{Flutter, Android, Retrofit, Realm.}
+        \resumeSubItem {Back-end:}{AWS, Firebase, Node.js, PostgreSQL, JWT, Express, Sequelize, Spring Framework, MySQL.}
+        \resumeSubItem {DevOps:}{Git, GitHub, Azure, Docker, GitLab.}
         \resumeSubItem {Tools:}{Insomnia, DBeaver.}
         \resumeSubItem {Soft Skills:}{Teamwork, communication, organization, creativity, critical thinking.}
         
-        \vspace{0.2cm} % Space between section
+        \vspace{0.3cm} % Space between section
     \resumeSubHeadingListEnd
 
 %-----------PROJECTS-----------------
@@ -259,7 +260,7 @@ Passionate about learning and creating things, both in the fields of art and tec
             \begin{itemize}
                 \item \textbf{HáLugar:} Housing app for students. Developed for Android platform using Java, and other tools such as Google Maps, Nominatim API, Glide, PhotoView, Compressor, and Firebase (Auth, Realtime Database, Storage). \href{https://play.google.com/store/apps/details?id=br.ufc.crateus.halugar}{\scriptsize \faExternalLink}
                 \item \textbf{Dissertation:} Procedural modeling with Blender and Python. \href{https://github.com/DanielBrito/monografia}{\scriptsize \faExternalLink}
-                \item \textbf{Compixelar:} Development of multimedia experiments using Processing. \href{https://medium.com/@danielhbrito}{\scriptsize \faExternalLink}
+                \item \textbf{Compixelar:} Development of multimedia experiments using p5.js and Processing. \href{https://medium.com/@danielhbrito}{\scriptsize \faExternalLink}
                 \item \textbf{RESTack:} Experimental REST API built with Node.js, Express, Sequelize, PostgreSQL and JWT. \href{https://github.com/DanielBrito/restack-api}{\scriptsize \faExternalLink}
                 \item \textbf{Home:} Refactored version of personal website using ReactJS and Material-UI. \href{https://danielbrito.github.io/home/}{\scriptsize \faExternalLink}
             \end{itemize}
@@ -273,9 +274,9 @@ Passionate about learning and creating things, both in the fields of art and tec
         \resumeSubItem{Visual Arts}{}
             \begin{itemize}
                 \item \textbf{Aluminions:} Creation of characters using aluminum seals. \href{https://www.instagram.com/aluminions.13/}{\scriptsize \faExternalLink}
+                
+                \vspace{0.1cm} % Space between sections
             \end{itemize}
-            
-            %\vspace{0.05cm} % Space between sections
     \resumeSubHeadingListEnd
 
 %-----------WORKSHOPS-----------------
@@ -285,11 +286,12 @@ Passionate about learning and creating things, both in the fields of art and tec
         \resumeWorkshops
             {Fire Tasks - An awesome task manager:}{\faMapMarker \hspace{0.1cm} Federal University of Ceará}
             {Application built with ReactJS, Styled Components and Firestore. \href{https://github.com/DanielBrito/fire-tasks}{\scriptsize \faExternalLink}}{\faCalendar \hspace{0.1cm} Mar 2021}
-        \resumeWorkshops
-            {Introduction to Digital Art with Blender:}{\faMapMarker \hspace{0.1cm} Federal University of Ceará}
-            {Presentation of basic resources like creating and animating digital objects.}{\faCalendar \hspace{0.1cm} Feb 2020}
-            
-            %\vspace{0.05cm} % Space between sections
+        
+        % \resumeWorkshops
+        %     {Introduction to Digital Art with Blender:}{\faMapMarker \hspace{0.1cm} Federal University of Ceará}
+        %     {Presentation of basic resources like creating and animating digital objects.}{\faCalendar \hspace{0.1cm} Feb 2020}
+        
+        \vspace{0.15cm} % Space between sections
     \resumeSubHeadingListEnd
     
 %-----------CERTIFICATIONS-----------------
@@ -300,19 +302,25 @@ Passionate about learning and creating things, both in the fields of art and tec
             {Responsive Web Design:}{{\small \faInstitution} \hspace{0.01cm} freeCodeCamp}
             {Basics of HTML and CSS. Best practices for accessibility. Responsive design principles. \href{https://www.freecodecamp.org/certification/danielbrito/responsive-web-design}{\scriptsize \faExternalLink}}{\faClockO \hspace{0.1cm} 300 h}
             
-            %\vspace{0.05cm} % Space between sections
+        \resumeCertifications
+            {JavaScript Algorithms and Data Structures:}{{\small \faInstitution} \hspace{0.01cm} freeCodeCamp}
+            {Fundamentals of JavaScript. Object-Oriented Programming and Functional Programming. \href{https://www.freecodecamp.org/certification/danielbrito/javascript-algorithms-and-data-structures}{\scriptsize \faExternalLink}}{\faClockO \hspace{0.1cm} 300 h}
+            
+            \vspace{0.1cm} % Space between sections
     \resumeSubHeadingListEnd
 
 %-----------AWARDS-----------------
 \section{\faTrophy \hspace{0.2cm} \Large Awards}
     \resumeSubHeadingListStart
-        \resumeSubItem{Best Work:}
-        {Project ``Practical studies of 3D modeling and Virtual Reality using Blender'' during Encontros Universitários at the Federal University of Ceará - Crateús Campus.}
-        
         \resumeSubItem{First Place:}
         {Hackathon FIT-ON, promoted during the Fórum de Inovação e Tecnologia at the Federal University of Ceará - Crateús Campus.}
         
         \vspace{0.2cm}
+        
+        \resumeSubItem{Best Work:}
+        {Project ``Practical studies of 3D modeling and Virtual Reality using Blender'' during Encontros Universitários at the Federal University of Ceará - Crateús Campus.}
+        
+        \vspace{0.3cm}
     \resumeSubHeadingListEnd
 
 %-----------PUBLICATIONS (Already on my website)-----------------
@@ -333,7 +341,7 @@ Passionate about learning and creating things, both in the fields of art and tec
 %-----------OTHER INTERESTS-----------------
 \section{\faThumbsUp \hspace{0.2cm} \Large Other Interests}
 
-    Generative design, competitive programming, chess, astronomy, philosophy, literature, sports, music, cinema, travelling, blogging.
+    Generative design, chess, astronomy, philosophy, literature, mathematics, history, poetry, sports, music, cinema, social activism, travelling, blogging.
   
 %-------------------------------------------
 \end{document}
